force-app/main/default/objects/BT_Course__c/BT_Course__c.object-meta.xml
<CustomObject>
    <label>BT Course</label>
    <nameField>
        <displayFormat>Course-{00000}</displayFormat>
        <label>Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>