force-app/main/default/objects/BT_Course__c/fields/AppropriateFor__c.field-meta.xml
<CustomField>
    <fullName>AppropriateFor__c</fullName>
    <label>Appropriate For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Appraisers</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Assistants</fullName>
            </value>
            <value>
                <fullName>Coordinators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>