force-app/main/default/objects/BT_Course__c/fields/AvailableDeliveryMethods__c.field-meta.xml
<CustomField>
    <fullName>AvailableDeliveryMethods__c</fullName>
    <label>Available Delivery Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>Streaming</fullName>
            </value>
            <value>
                <fullName>In-person Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>