force-app/main/default/objects/BT_Course__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the course available to schedule or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>