force-app/main/default/objects/BT_Course__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the course</description>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>