force-app/main/default/objects/BT_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>AppropriateFor__c</columns>
    <columns>AvailableDeliveryMethods__c</columns>
    <columns>Description__c</columns>
    <columns>Duration__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>